--- a/admin/package.json
+++ b/admin/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-microsoft-login": "^2.0.1",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0"
   },
