--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
