--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
         password: ${{ secrets.SSH_PASSWORD }}
         port: ${{ secrets.SSH_PORT }}
         script: |
-          cd /home/${{secrets.SSH_USERNAME}}/navegatec && git pull
+          cd /home/${{secrets.SSH_USERNAME}}/NavegaTec && git pull
