--- a/admin/package.json
+++ b/admin/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host --port 5175",
-    "build": "vite build",
+    "build": "vite build --outDir ../../navegatec-backend/public/admin/ --emptyOutDir",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
