--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "concurrently \"npm run --prefix ./client dev\" \"npm run --prefix ./admin dev\" \"npm run --prefix ./documentation start\"",
     "test": "test",
-    "build": "npx vite build ./client --outDir ../../navegatec-backend/public/client/ --emptyOutDir && npx vite build ./admin --outDir ../../navegatec-backend/public/admin/ --emptyOutDir"
+    "build": "npm run --prefix ./client build && npm run --prefix ./admin build"
   },
   "repository": {
     "type": "git",
