--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,7 @@ jobs:
         password: ${{ secrets.SSH_PASSWORD }}
         port: ${{ secrets.SSH_PORT }}
         script: |
-          cd /home/${{secrets.SSH_USERNAME}}/NavegaTec && git pull
-          
-          npm run build
+          cd /home/${{secrets.SSH_USERNAME}}/NavegaTec && git pull && npm run build
           
           cd /home/${{secrets.SSH_USERNAME}}/navegatec-backend
 
