--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
 version: '3'
 services:
   navegatec-frontend:
-    build: .
+    build: 
+      context: .
     volumes:
-      - .:/app
+      - type: bind
+        source: ./
+        target: /app
+      - /app/node_modules
     ports:
       - "5175:5175"
       - "5176:5176"
-      - "3000:3000"
+      - "4444:4444"
