--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "workspaces": [
     "admin",
-    "client"
+    "client",
+    "documentation"
   ],
   "scripts": {
     "dev": "concurrently \"npm run --prefix ./client dev\" \"npm run --prefix ./admin dev\" \"npm run --prefix ./documentation start\"",
